# german_tracker

./: .gitattributes  .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  importer.py  llm.py  main.py  repository.py  schemas.py
backend/app/routers/: conversation.py  data.py  grade.py  transcribe.py
deploy/: Caddyfile  deploy.sh  server-setup.sh  sprachheld.service
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorList.tsx  MicButton.tsx  TokenGate.tsx  VideoBackground.tsx
frontend/src/lib/: api.ts  seed.ts  speech.ts  store.ts  types.ts
frontend/src/screens/: Cards.tsx  Conversation.tsx  Landing.tsx  Translation.tsx
frontend/src/types/: speech.d.ts
